# Resilient

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  LSP.md  MISSING_FEATURES.md  NEXT_STEPS.md  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  STDLIB.md  SYNTAX.md  server.json
.board/: LOOP_STATUS.md  (+3 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: contracts.rs  jit.rs  lex.rs  mcp_http_parse.rs  parse.rs  z3_translate.rs
fuzz/seed-corpus/contracts/: no_contract.rs  safe_div.rs
fuzz/seed-corpus/jit/: res_4171_div_zero_return  res_4171_mod_zero_return
fuzz/seed-corpus/lex/: comments_and_strings.rs  tokens.rs
fuzz/seed-corpus/mcp_http_parse/: bad_content_length  get_health  invalid_utf8  malformed_no_version  post_mcp_call
fuzz/seed-corpus/parse/: basic_fn.rs  deep_nested_parens.rs  deep_nested_prefix_bang.rs  loop_and_array.rs
fuzz/seed-corpus/z3_translate/: bitwise_bv.rs  noninterference_leak.rs  noninterference_ok.rs  overflow_axioms.rs  region_disjoint.rs
playground/: .gitignore  Cargo.toml  README.md  build.sh
playground/src/: lib.rs
playground/web/: index.html  main.js  style.css
resilient/: Cargo.toml  Cross.toml  build.rs  convert_functions.sh  fix_examples.sh  run_example.sh  run_examples.sh  test_assoc_missing.rz  test_assoc_parse.rz  test_enhanced_parser.sh  test_missing_method.rz  test_parser.rs  test_simple_assoc.rz  test_simple_assoc2.rz
resilient-runtime/: Cargo.toml  README.md
resilient-runtime-cortex-m-demo/: Cargo.toml  README.md  memory.x
resilient-runtime-cortex-m-demo/.cargo/: config.toml
resilient-runtime-cortex-m-demo/src/: main.rs
resilient-runtime-loader-demo/: Cargo.toml  README.md  memory.x  run_qemu.sh
resilient-runtime-loader-demo/.cargo/: config.toml
resilient-runtime-loader-demo/src/: main.rs
resilient-runtime/fixtures/: arithmetic_demo.rzbc  calls_demo.rzbc  closures_args_demo.rzbc  closures_demo.rzbc  fails_try_demo.rzbc  thermal_cutoff_demo.rzbc
resilient-runtime/src/: dma.rs  ffi_static.rs  fixed.rs  gpio.rs  heap.rs  interrupt.rs  lib.rs  live_telemetry.rs  rcc.rs  sink.rs  timer.rs  uart.rs  vm.rs
resilient-runtime/src/vm/: loader.rs  serde.rs
resilient-runtime/tla/: runtime.cfg  runtime.tla
resilient-span/: Cargo.toml
resilient-span/src/: lib.rs
resilient/.cargo/: config.toml
resilient/benches/: interpreter.rs
resilient/examples/: abs_diff.expected.txt  abs_diff.rz  acos.rz  acosh.rz  actor_commute.expected.txt  actor_commute.interactive  actor_commute.rz  actor_deadlock.expected.txt  actor_deadlock.rz  actor_drain.expected.txt  actor_drain.rz  actor_eventually_drain.expected.txt  actor_eventually_drain.rz  actor_eventually_nodrain.expected.txt  actor_eventually_nodrain.rz  actor_isolation_reject_ref_handler.expected.txt  actor_isolation_reject_ref_handler.rz  actor_isolation_reject_ref_state.expected.txt  actor_isolation_reject_ref_state.rz  actor_noncommute.interactive  actor_noncommute.rz  actor_ping_pong.expected.txt  actor_ping_pong.rz  actor_queue_broken.expected.txt  actor_queue_broken.rz  actor_queue_safe.expected.txt  actor_queue_safe.rz  actor_ref_payload_bad.rz  actor_ref_state_bad.rz  actor_spawn_send.expected.txt  actor_spawn_send.rz  actor_value_payload_ok.rz  age_bounded_data.expected.txt  age_bounded_data.rz  ai_threat_demo.expected.txt  ai_threat_demo.rz  algorithmic_patterns.expected.txt  algorithmic_patterns.rz  alignment_helpers.expected.txt  alignment_helpers.rz  (+1453 more)
resilient/examples/imports_demo/: helpers.rz  main.res  main.rs  main.rz
resilient/examples/lsp_workspace_goto/: helpers.rz  main.rz
resilient/examples/pkg_with_targets/: main.rz  rz.toml
resilient/lean-spec/: Resilient.lean  lakefile.lean
resilient/lean-spec/Resilient/: AST.lean  Semantics.lean  Theorems.lean
resilient/new_examples/: live_block_demo.rs.bak  simple.rs.bak
resilient/src/: actor_drain.rs  actor_isolation.rs  actor_runtime.rs  age_bounded_data.rs  ai_generated.rs  ai_threat_model.rs  alignment_helpers.rs  anti_regression.rs  array_argminmax.rs  array_binary_search.rs  array_chunking.rs  array_combinators.rs  array_cumulative.rs  array_dedup_none.rs  array_flatten_depth.rs  array_functional.rs  array_set_helpers.rs  array_sort_extra.rs  array_stats.rs  array_struct_sort.rs  ascii_predicates.rs  associated_constants.rs  associated_types.rs  assume_axioms.rs  assume_false_checker.rs  async_await.rs  atomic_types.rs  audit_log_required.rs  autopilot.rs  backpressure_safe.rs  bandwidth_budget.rs  behavioral_fingerprint.rs  bench.rs  bit_manipulation.rs  blame_attribution.rs  blanket_impl.rs  bounded_blocking.rs  bounds_check.rs  bytecode.rs  bytes_bitwise.rs  (+245 more)
resilient/tests/: actor_isolation_smoke.rs  agent_docs_core_file_paths_smoke.rs  agent_docs_lib_touchpoints_smoke.rs  agent_playbook_lib_allowlist_smoke.rs  ai_threats_smoke.rs  bench_cli.rs  builtin_array_edge_cases.rs  builtin_bitwise_edge_cases.rs  builtin_bytes_collections_edge_cases.rs  builtin_int_cast_edge_cases.rs  builtin_jit_source_lib_split_smoke.rs  cfg_attr_source_lib_split_smoke.rs  check_help_smoke.rs  check_smoke.rs  cli_integration_edge_cases.rs  cli_toggle_source_lib_split_smoke.rs  cluster_invariant_smoke.rs  concurrency_preview_smoke.rs  const_eval_ext_regression.rs  const_eval_ext_runtime_rejections.rs  core_touchpoint_source_lib_split_smoke.rs  diagnostic_model_copy_smoke.rs  diagnostics_snapshots.rs  differential.rs  docs_certificates_manifest_schema_smoke.rs  docs_certification_roadmap_copy_smoke.rs  docs_certification_verify_all_command_smoke.rs  docs_certification_z3_command_smoke.rs  docs_community_crash_command_smoke.rs  docs_error_e0010_verify_copy_smoke.rs  docs_error_example_copy_smoke.rs  docs_error_source_paths_smoke.rs  docs_landing_copy_smoke.rs  docs_landing_example_path_smoke.rs  docs_language_reference_use_path_smoke.rs  docs_live_block_source_paths_smoke.rs  docs_live_clock_copy_smoke.rs  docs_lsp_code_actions_copy_smoke.rs  docs_lsp_diagnostics_copy_smoke.rs  docs_lsp_extension_workspace_copy_smoke.rs  (+138 more)
(+1105 files in other folders)
