[package]
name = "resilient-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[features]
# RES-310: opt-in JIT fuzz target. Mirrors the compiler's
# `--features jit` gate — the `jit` harness shells out to a
# `rz` binary that must itself be built with `--features jit`,
# so making the harness opt-in keeps the default fuzz build
# from advertising a target that only works against a JIT-
# enabled compiler. Enable with:
#
#   cargo +nightly fuzz run jit --features jit
#
# RES-4039 (C-E6): opt-in Z3-translation fuzz target. Same shape as
# `jit` above — the `z3_translate` harness shells out to a `rz`
# binary that must itself be built with `--features z3`, so gating
# the `[[bin]]` behind the fuzz crate's own `z3` feature keeps the
# default fuzz build from advertising a target that only exercises
# `verifier_z3` code against a z3-enabled compiler. Enable with:
#
#   cargo +nightly fuzz run z3_translate --features z3
default = []
jit = []
z3 = []

[dependencies]
# RES-201: `libfuzzer-sys` wraps libFuzzer so we can write the
# target as a plain Rust `fuzz_target!` macro. Tracks the cargo-
# fuzz recommended pin.
libfuzzer-sys = "0.4"

# All targets shell out to the built `rz` binary. The compiler has
# a library target, but these harnesses intentionally exercise the
# shipped CLI boundary instead of depending on private parser/lexer
# internals as an in-process fuzzing API. `tempfile` gives us the
# scratch .rs files.
tempfile = "3"

# RES-3779: `contracts` target parses `--emit-contract-certificate`
# output to assert it's well-formed JSON with in-schema verdicts.
# Not a new dependency to the workspace's graph — `resilient/Cargo.toml`
# already pulls in `serde_json = "1"` unconditionally (cache + LSP),
# so this reuses an already-vetted, already-pinned crate.
serde_json = "1"

# RES-3943: `mcp_http_parse` depends on the `resilient` library directly
# (not the shipped CLI) because the MCP HTTP wrapper's request parser has
# no CLI-boundary equivalent to shell out to. It calls a single narrow,
# `#[doc(hidden)] pub` seam (`resilient::mcp_server::fuzz_parse_http_request`)
# — see that function's doc comment for the "why this one exception"
# rationale.
resilient = { path = "../resilient" }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lex"
path = "fuzz_targets/lex.rs"
test = false
doc = false
bench = false

# RES-3779: contract-certificate fuzz target. Routes fuzzed source
# through `rz --emit-contract-certificate` (RES-3859) and asserts
# both "no crash" and "any emitted certificate is schema-valid".
# No feature gate needed — certificate emission works without z3
# (verdicts degrade to "unknown").
[[bin]]
name = "contracts"
path = "fuzz_targets/contracts.rs"
test = false
doc = false
bench = false

# RES-310: JIT fuzz target. Gated on the fuzz crate's `jit`
# feature so it only builds when the user explicitly opts in,
# matching the `--features jit` gate on the compiler crate.
[[bin]]
name = "jit"
path = "fuzz_targets/jit.rs"
test = false
doc = false
bench = false
required-features = ["jit"]

# RES-4039 (C-E6): Z3-translation-layer fuzz target. Routes fuzzed /
# seeded contract source through the typechecker on a `--features z3`
# `rz` build, so `requires`/`ensures`/`#[noninterference(...)]`/region-
# disjointness obligations reach `verifier_z3`'s `prove_*` entry
# points for real. Gated on the fuzz crate's own `z3` feature, same
# reasoning as `jit` above.
[[bin]]
name = "z3_translate"
path = "fuzz_targets/z3_translate.rs"
test = false
doc = false
bench = false
required-features = ["z3"]

# RES-3943: HTTP request-parser fuzz target for the MCP HTTP wrapper. Not
# CLI-based (see the `resilient` dependency comment above) — this is the
# in-process exception documented there.
[[bin]]
name = "mcp_http_parse"
path = "fuzz_targets/mcp_http_parse.rs"
test = false
doc = false
bench = false
