[package]
name = "resilient-runtime"
version = "0.1.0"
edition = "2024"
description = "Minimal #![no_std] runtime types for Resilient — Value enum + core ops, suitable for embedded targets"
authors = ["Eric Spencer"]

[features]
default = []
# RES-098: opt-in heap-using variants. Pulls in `alloc` (host) or
# `embedded-alloc` (Cortex-M / similar) so Value::String can carry
# an actual `alloc::string::String`. Without this feature the lib
# is allocation-free.
alloc = ["dep:embedded-alloc"]
# RES-178: assertive alloc-ban for safety-critical builds that
# forbid dynamic allocation entirely. Mutually exclusive with
# `alloc` — a compile_error! in `lib.rs` fires if both are set.
# Under this feature, every heap-bearing Value variant (today:
# `String`, plus any future Array / Map when they land here) is
# structurally absent, and no `extern crate alloc` line is
# compiled. The feature itself is empty — the ban is enforced by
# existing `#[cfg(feature = "alloc")]` gates and the new
# mutual-exclusion check.
static-only = []
# RES-180: expose a `StdoutSink` that forwards `sink::print` /
# `sink::println` through `std::io::stdout()`. Requires std —
# unavailable in no_std deployments. The core Sink trait +
# global `print` / `println` helpers are always available
# without this feature; this just adds a convenience
# implementation for users who WANT to route to stdout.
std-sink = []
# FFI static registry for no_std embedded hosts.
# Pick exactly ONE capacity feature (default 64):
ffi-static = []
ffi-static-64 = ["ffi-static"]
ffi-static-256 = ["ffi-static"]
ffi-static-1024 = ["ffi-static"]

[dependencies]
embedded-alloc = { version = "0.5", optional = true }
