[package]
name = "resilient"
version = "0.1.0"
edition = "2024"
description = "A programming language designed for extreme reliability in embedded and safety-critical systems"
authors = ["Eric Spencer"]
# `examples/*.rs` holds Resilient-language source files (they use the `.rs`
# extension for editor support), not Rust. Disable Cargo's auto-discovery so
# it doesn't try to build them as Rust examples.
autoexamples = false

[features]
# RES-067: opt-in Z3 SMT verification. Default off so the build only
# requires libz3 when explicitly requested:
#
#   cargo build --features z3
#
# The verifier uses our hand-rolled folder by default (RES-060..065)
# and falls back to Z3 only when fold returns Unknown.
default = []
z3 = ["dep:z3"]
# RES-074: opt-in LSP server. Default off so the regular build
# doesn't pull in tower-lsp/tokio's transitive-dep tree. Enable with:
#
#   cargo build --features lsp
#
# and run `resilient --lsp` to speak Language Server Protocol over
# stdio. Editor config examples in LSP.md at repo root.
lsp = ["dep:tower-lsp", "dep:tokio"]
# RES-072: opt-in Cranelift JIT backend. Default off so the default
# build doesn't pull in cranelift's heavy transitive dep tree
# (~150 crates, several seconds of build cost). Enable with:
#
#   cargo build --features jit
#
# and run `resilient --jit prog.rs` to lower the program to native
# code instead of going through the tree walker / bytecode VM.
# Phase A only ships the scaffolding; RES-096+ adds AST lowering.
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-native", "dep:cranelift-module"]
# RES-108: opt-in logos-based lexer (G5 foundation). Default off so the
# hand-rolled scanner stays authoritative until RES-109 benchmarks land.
# Enable with:
#
#   cargo build --features logos-lexer
#
# which routes `Lexer::new(src)` through `lexer_logos` instead of the
# hand-rolled scanner. A parity test in the unit-test module cross-
# checks the two token streams on every example in `resilient/examples/`.
logos-lexer = ["dep:logos"]

[dependencies]
# RES-115: source-position types live in their own crate so
# downstream tooling can depend on just the span layer without
# pulling in the whole compiler. `resilient/src/span.rs` is now a
# thin `pub use resilient_span::*;` shim; `resilient-runtime`
# does *not* take this dep (it stays no_std-clean).
resilient-span = { path = "../resilient-span" }
clap = { version = "4.4", features = ["derive"] }
logos = { version = "0.14", optional = true }
rustyline = "12.0.0"
z3 = { version = "0.12", optional = true }
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"], optional = true }
cranelift = { version = "0.108", optional = true }
cranelift-jit = { version = "0.108", optional = true }
cranelift-native = { version = "0.108", optional = true }
cranelift-module = { version = "0.108", optional = true }

[dev-dependencies]
# RES-200: snapshot tests for diagnostic rendering. Test-only dep —
# doesn't appear in the release binary's transitive tree. Use
# `cargo insta review` (requires `cargo install cargo-insta`) to
# audit pending diffs when a snapshot drifts; commit the reviewed
# `.snap` files under `resilient/tests/snapshots/`.
insta = { version = "1", features = ["filters"] }
# RES-189: LSP inlay-hint tests construct `initializationOptions`
# JSON via `serde_json::json!`. tower-lsp pulls serde_json in
# transitively but the macro needs a direct dep edge so the test
# module can see it.
serde_json = "1"
