[package]
name = "resilient"
version = "0.1.0"
edition = "2024"
description = "A programming language designed for extreme reliability in embedded and safety-critical systems"
authors = ["Eric Spencer"]
# `examples/*.rs` holds Resilient-language source files (they use the `.rs`
# extension for editor support), not Rust. Disable Cargo's auto-discovery so
# it doesn't try to build them as Rust examples.
autoexamples = false

# RES-219: the shipped CLI binary is `rz` (short, ergonomic, matches the
# `.rz` source extension). The package stays `resilient` so library
# consumers and `cargo install resilient` continue to work.
[[bin]]
name = "rz"
path = "src/main.rs"

[features]
# RES-067: opt-in Z3 SMT verification. Default off so the build only
# requires libz3 when explicitly requested:
#
#   cargo build --features z3
#
# The verifier uses our hand-rolled folder by default (RES-060..065)
# and falls back to Z3 only when fold returns Unknown.
default = []
z3 = ["dep:z3"]
# RES-074: opt-in LSP server. Default off so the regular build
# doesn't pull in tower-lsp/tokio's transitive-dep tree. Enable with:
#
#   cargo build --features lsp
#
# and run `resilient --lsp` to speak Language Server Protocol over
# stdio. Editor config examples in LSP.md at repo root.
lsp = ["dep:tower-lsp", "dep:tokio"]
# RES-072: opt-in Cranelift JIT backend. Default off so the default
# build doesn't pull in cranelift's heavy transitive dep tree
# (~150 crates, several seconds of build cost). Enable with:
#
#   cargo build --features jit
#
# and run `resilient --jit prog.rs` to lower the program to native
# code instead of going through the tree walker / bytecode VM.
# Phase A only ships the scaffolding; RES-096+ adds AST lowering.
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-native", "dep:cranelift-module"]
# RES-108: opt-in logos-based lexer (G5 foundation). Default off so the
# hand-rolled scanner stays authoritative until RES-109 benchmarks land.
# Enable with:
#
#   cargo build --features logos-lexer
#
# which routes `Lexer::new(src)` through `lexer_logos` instead of the
# hand-rolled scanner. A parity test in the unit-test module cross-
# checks the two token streams on every example in `resilient/examples/`.
logos-lexer = ["dep:logos"]
# RES-120: opt-in Hindley-Milner inference prototype. Adds the
# `infer` module; off by default until RES-123 flips it on once
# the surface is covered.
infer = []
# FFI Phase 1: opt-in dynamic-library loading via libloading. Default off
# so the standard build has zero native-library dependency. Enable with:
#
#   cargo build --features ffi
#
# The `ffi` module provides `ForeignLoader` which resolves extern-block
# symbols at evaluation time so the tree-walker can dispatch in O(1).
ffi = ["dep:libloading"]
# RES-199: opt-in property-based parser / formatter roundtrip tests.
# Gated so CI can run the full suite with --features proptest on merge;
# off by default to keep the fast-path build free of proptest's dep tree.
#
#   cargo test --features proptest
#
proptest = ["dep:proptest"]

[dependencies]
# RES-115: source-position types live in their own crate so
# downstream tooling can depend on just the span layer without
# pulling in the whole compiler. `resilient/src/span.rs` is now a
# thin `pub use resilient_span::*;` shim; `resilient-runtime`
# does *not* take this dep (it stays no_std-clean).
resilient-span = { path = "../resilient-span" }
resilient-runtime = { path = "../resilient-runtime" }
clap = { version = "4.4", features = ["derive"] }
libloading = { version = "0.8", optional = true }
logos = { version = "0.14", optional = true }
rustyline = "12.0.0"
z3 = { version = "0.12", optional = true }
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"], optional = true }
cranelift = { version = "0.108", optional = true }
cranelift-jit = { version = "0.108", optional = true }
cranelift-native = { version = "0.108", optional = true }
cranelift-module = { version = "0.108", optional = true }
# RES-199: proptest for property-based roundtrip tests. Optional so it
# doesn't widen the default build's dep tree; activate with
# `--features proptest`.
proptest = { version = "1", optional = true }
# RES-228: `--watch` mode — cross-platform file watcher with 200ms debounce.
# Both crates are unconditional so the CLI flag is always available; the
# overhead is minimal (< 1 ms on the hot path) because the watcher thread
# only starts when --watch is actually passed.
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.7"
# RES-194: Ed25519 signatures on RES-071 verification certificates.
# `rand_core` brings in the OS RNG we use for keypair generation
# in the test helpers (see `resilient/src/cert_sign.rs`).
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
# RES-195: SHA-256 for the cert manifest's per-obligation hash,
# and serde_json for parsing/emitting the manifest itself. `sha2`
# is already transitive via ed25519-dalek; we promote it to a
# direct dep edge so the build doesn't depend on the transitive
# tree for correctness.
sha2 = "0.10"
serde_json = "1"

[dev-dependencies]
# RES-200: snapshot tests for diagnostic rendering. Test-only dep —
# doesn't appear in the release binary's transitive tree. Use
# `cargo insta review` (requires `cargo install cargo-insta`) to
# audit pending diffs when a snapshot drifts; commit the reviewed
# `.snap` files under `resilient/tests/snapshots/`.
insta = { version = "1", features = ["filters"] }
# RES-189 tests use `serde_json::json!` — serde_json is now a
# regular dep (RES-195) so nothing to add here.
# RES-218: Criterion benchmark harness driving the tree-walker
# interpreter on three representative workloads (recursive fib,
# bubble-sort, string-processing). Test-only dep; see
# `resilient/benches/interpreter.rs` and the Performance section
# of the repo README for how to run.
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
# RES-218: Criterion-driven baselines for the tree-walker. `harness
# = false` lets Criterion own `main`; the benchmark invokes the
# compiled `resilient` binary (the language's only supported entry
# point today — main.rs is not exposed as a library) against
# inline Resilient source.
name = "interpreter"
harness = false
