[package]
name = "resilient"
version = "0.2.1"
edition = "2024"
description = "A programming language designed for extreme reliability in embedded and safety-critical systems"
authors = ["Eric Spencer"]
# `examples/*.rz` holds Resilient-language source files, not Rust examples.
# Disable Cargo's auto-discovery so it doesn't try to build example sidecars
# or future helper files as Rust examples.
autoexamples = false

# RES-510: the compiler is exposed as both a library and a binary.
#   - `[lib]`  → `resilient` rlib for non-CLI consumers (WASM
#                playground, future LSP-as-a-service, in-process
#                test harnesses).
#   - `[[bin]]` → the shipped CLI driver `rz` (short, ergonomic,
#                 matches the `.rz` source extension; from RES-219).
# The bin's `main.rs` is a thin shim that calls `resilient::run_cli()`.
#
# RES-2993: doctests are back on for the stable public API surface.
# Legacy non-runnable snippets are marked as `text` / `ignore`
# explicitly so they no longer force doctests off for the whole crate.
[lib]
name = "resilient"
path = "src/lib.rs"
doctest = true

[[bin]]
name = "rz"
path = "src/main.rs"
# RES-1198: `main.rs` is a 12-line shim (`fn main() { resilient::run_cli(); }`)
# with zero `#[test]` and zero `#[bench]` items, so re-linking it under the
# test / bench profiles is pure waste — cargo otherwise rebuilds it under
# every profile (dev, test, bench) plus when `cargo clippy --all-targets`
# checks them. Saves a link per non-dev profile; nothing else changes.
test = false
bench = false

[features]
# RES-067: opt-in Z3 SMT verification. Default off so the build only
# requires libz3 when explicitly requested:
#
#   cargo build --features z3
#
# The verifier uses our hand-rolled folder by default (RES-060..065)
# and falls back to Z3 only when fold returns Unknown.
default = []
z3 = ["dep:z3", "dep:ed25519-dalek", "dep:rand_core"]
# RES-074: opt-in LSP server. Default off so the regular build
# doesn't pull in tower-lsp/tokio's transitive-dep tree. Enable with:
#
#   cargo build --features lsp
#
# and run `rz --lsp` to speak Language Server Protocol over
# stdio. Editor config examples in LSP.md at repo root.
lsp = ["dep:tower-lsp", "dep:tokio"]
# RES-072: opt-in Cranelift JIT backend. Default off so the default
# build doesn't pull in cranelift's heavy transitive dep tree
# (~150 crates, several seconds of build cost). Enable with:
#
#   cargo build --features jit
#
# and run `rz --jit prog.rz` to lower the program to native
# code instead of going through the tree walker / bytecode VM.
# The JIT lowers the supported tree-walker subset to native code and
# reports unsupported AST shapes cleanly so callers can fall back.
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-native", "dep:cranelift-module"]
# RES-108: opt-in logos-based lexer (G5 foundation). Default off so the
# hand-rolled scanner stays authoritative until RES-109 benchmarks land.
# Enable with:
#
#   cargo build --features logos-lexer
#
# which routes `Lexer::new(src)` through `lexer_logos` instead of the
# hand-rolled scanner. A parity test in the unit-test module cross-
# checks the two token streams on every example in `resilient/examples/`.
logos-lexer = ["dep:logos"]
# RES-120: opt-in Hindley-Milner inference prototype. Adds the
# `infer` module; off by default until RES-123 flips it on once
# the surface is covered.
infer = []
# FFI Phase 1: opt-in dynamic-library loading via libloading. Default off
# so the standard build has zero native-library dependency. Enable with:
#
#   cargo build --features ffi
#
# The `ffi` module provides `ForeignLoader` which resolves extern-block
# symbols at evaluation time so the tree-walker can dispatch in O(1).
ffi = ["dep:libloading"]
# RES-199: opt-in property-based parser / formatter roundtrip tests.
# Gated so CI can run the full suite with --features proptest on merge;
# off by default to keep the fast-path build free of proptest's dep tree.
#
#   cargo test --features proptest
#
proptest = ["dep:proptest"]

[dependencies]
# RES-115: source-position types live in their own crate so
# downstream tooling can depend on just the span layer without
# pulling in the whole compiler. `resilient/src/span.rs` is now a
# thin `pub use resilient_span::*;` shim; `resilient-runtime`
# does *not* take this dep (it stays no_std-clean).
resilient-span = { path = "../resilient-span" }
resilient-runtime = { path = "../resilient-runtime" }
clap = { version = "4.4", features = ["derive"] }
libloading = { version = "0.8", optional = true }
logos = { version = "0.14", optional = true }
z3 = { version = "0.12", optional = true }
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"], optional = true }
cranelift = { version = "0.108", optional = true }
cranelift-jit = { version = "0.108", optional = true }
cranelift-native = { version = "0.108", optional = true }
cranelift-module = { version = "0.108", optional = true }
# RES-199: proptest for property-based roundtrip tests. Optional so it
# doesn't widen the default build's dep tree; activate with
# `--features proptest`.
proptest = { version = "1", optional = true }
# RES-1202: ed25519-dalek + rand_core are only consumed by
# `cert_sign.rs` and its callers in `lib.rs` (the
# `emit_certificates` / `dispatch_verify_*` paths), all of which
# exist solely to materialise + verify RES-071 proof certificates
# from the Z3 verifier. Gating them behind `feature = "z3"` drops
# ed25519-dalek (with its curve25519-dalek / digest / signature
# transitive subtree) and rand_core + getrandom off the
# default-build dep graph. Net effect: a stock `cargo build` /
# `cargo test` / `cargo clippy` (no `--features z3`) compiles
# ~10 fewer dep crates.
#
# `sha2` stays unconditional because `lib.rs::check_program_with_…`
# also computes a source-file SHA-256 for the incremental-cache
# hit check (RES-355), independent of cert work. `serde_json`
# likewise stays unconditional — `cache.rs` and `lsp_server.rs`
# need it regardless of feature flags.
#
# RES-194: Ed25519 signatures on RES-071 verification certificates.
# `rand_core` brings in the OS RNG we use for keypair generation in
# the test helpers (see `resilient/src/cert_sign.rs`).
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
# RES-195: SHA-256 for the cert manifest's per-obligation hash AND
# the incremental build cache's source-file hash. Always-on.
regex = "1"
sha2 = "0.10"
serde_json = "1"

# RES-510 PR 3: deps that are CLI-only and don't compile to wasm32
# (or aren't useful there). Moved out of the unconditional
# `[dependencies]` block so the WASM playground can pull `resilient`
# in as a library without dragging termios / inotify / fsevent in.
#
# - rustyline: REPL line editor; uses termios + ncurses-shaped APIs.
# - notify, notify-debouncer-mini: file watcher for `--watch` mode;
#   uses platform-specific fs notification (inotify / kqueue /
#   ReadDirectoryChangesW / FSEvents), none of which are available
#   in the wasm32-unknown-unknown sandbox.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "12.0.0"
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.7"

# RES-510 PR 3: WASM-only dep edges. `getrandom` is a transitive of
# `rand_core` (via `ed25519-dalek`); on `wasm32-unknown-unknown` it
# needs the `js` feature to call `crypto.getRandomValues` through
# `wasm-bindgen`. Without this feature, `cargo build --target
# wasm32-unknown-unknown` aborts during getrandom's compile step.
# We promote getrandom to a direct dep on wasm32 only, so the
# native build's transitive resolution stays untouched.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# RES-200: snapshot tests for diagnostic rendering. Test-only dep —
# doesn't appear in the release binary's transitive tree. Use
# `cargo insta review` (requires `cargo install cargo-insta`) to
# audit pending diffs when a snapshot drifts; commit the reviewed
# `.snap` files under `resilient/tests/snapshots/`.
insta = { version = "1", features = ["filters"] }
# RES-189 tests use `serde_json::json!` — serde_json is now a
# regular dep (RES-195) so nothing to add here.
# RES-218: Criterion benchmark harness driving the tree-walker
# interpreter on three representative workloads (recursive fib,
# bubble-sort, string-processing). Test-only dep; see
# `resilient/benches/interpreter.rs` and the Performance section
# of the repo README for how to run.
#
# RES-1195: opt out of criterion's default-features. The bench code in
# `benches/interpreter.rs` only touches the `Criterion`, `criterion_group`,
# `criterion_main` surface — it doesn't render HTML reports, doesn't
# generate plots, and the harness uses ten samples per workload so
# rayon-parallelised sample collection isn't a needle-mover. Dropping
# `html_reports` (tinytemplate), `plotters` (plotters-backend +
# plotters-svg), and `rayon` removes a sizeable transitive dep
# subtree from every `cargo test` build — none of those crates are
# touched outside the bench, and as a `dev-dependencies` entry the
# release binary's transitive tree is unaffected either way.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
# RES-218: Criterion-driven baselines for the tree-walker. `harness
# = false` lets Criterion own `main`; the benchmark invokes the
# compiled `rz` binary (the language's only supported entry
# point today — main.rs is not exposed as a library) against
# inline Resilient source.
name = "interpreter"
harness = false

# RES-1184 / RES-1189: dev-iteration speedups moved to the workspace
# root in RES-1584. Cargo silently ignores `[profile.*]` blocks
# declared in non-root workspace members, so leaving them here would
# regress every `cargo build`/`test`/`clippy` run. See the root
# `Cargo.toml` for the same config applied workspace-wide (which now
# extends the same gain to `resilient-runtime` and `resilient-span`
# dev builds).
